--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: php:5.6
-
 stages:
   - install
   - test
@@ -7,37 +5,32 @@ stages:
 
 variables:
   DB_HOST: "localhost"
-  DB_NAME: "test_db"
+  DB_NAME: "user_auth_db"
   DB_USER: "root"
-  DB_PASSWORD: "password"
+  DB_PASSWORD: "root"
 
-before_script:
-  - apt-get update && apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev zip
-  - docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
-  - docker-php-ext-install gd
-  - curl -sS https://getcomposer.org/installer | php
-  - mv composer.phar /usr/local/bin/composer
-  - composer install
-
-# Install dependencies
+# Job to install dependencies
 install_dependencies:
   stage: install
+  image: php:5.6-apache
   script:
-    - echo "Installing dependencies using Composer"
-    - composer install --no-interaction
+    - apt-get update && apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev
+    - docker-php-ext-install gd mysqli pdo pdo_mysql
+    - cp .env.example .env
+    - composer install
 
-# Run PHP tests (if any)
+# Job to run PHP unit tests (Optional)
 run_tests:
   stage: test
+  image: php:5.6
   script:
-    - echo "Running PHP tests"
-    - vendor/bin/phpunit --configuration phpunit.xml
+    - composer install
+    - ./vendor/bin/phpunit --configuration phpunit.xml.dist
 
-# Deployment (example step, adjust as needed)
-#deploy_to_production:
+# Job to deploy to server (example for Heroku or any server)
+#deploy:
 #  stage: deploy
 #  script:
-#    - echo "Deploying to production server"
-#    - scp -r * user@production_server:/path/to/deployment/folder/
-#  only:
-#    - master  # Deploy only from the master branch
+#    - echo "Deploying to production..."
+    # Add your deployment steps here
+#    - ssh user@your-server 'cd /path/to/app && git pull origin main && composer install'
