--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,34 +4,31 @@ stages:
   - deploy
 
 # Install dependencies
-install:
+install_dependencies:
   stage: install
   image: php:5.6
-  before_script:
-    - apt-get update -y
-    - apt-get install -y git unzip
-    - curl -sS https://getcomposer.org/installer | php
   script:
-    - php composer.phar install
+    - apt-get update
+    - apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev zip git
+    - docker-php-ext-configure gd --with-freetype-dir=/usr/include/freetype2 --with-jpeg-dir=/usr/include
+    - docker-php-ext-install gd
+    - curl -sS https://getcomposer.org/installer | php
+    - mv composer.phar /usr/local/bin/composer
+    - composer install
 
-# Run tests (Example: PHPUnit)
-test:
+# Run tests (you can replace this with your actual testing script)
+run_tests:
   stage: test
   image: php:5.6
-  before_script:
-    - apt-get update -y
-    - apt-get install -y git unzip
-    - curl -sS https://getcomposer.org/installer | php
-    - php composer.phar install
   script:
-    - ./vendor/bin/phpunit --configuration phpunit.xml
+    - vendor/bin/phpunit --configuration phpunit.xml.dist
 
-# Deploy to server (Example: FTP)
-#deploy:
+# Deploy to production (you can modify this section based on your environment)
+#deploy_to_production:
 #  stage: deploy
 #  script:
-#    - echo "Deploying the project"
-#    - apt-get install -y lftp
-#    - lftp -f deploy.lftp
+#    - echo "Deploying to production server..."
+#    - ssh user@production-server 'cd /path/to/your/project && git pull origin master'
+#    - echo "Deployment completed"
 #  only:
-#    - main
+#    - master
