--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,40 @@
 stages:
   - install
   - test
+  - build
   - deploy
 
-# Install dependencies
 install_dependencies:
   stage: install
-  image: php:5.6
+  image: composer:latest
   script:
-    - apt-get update
-    - apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev zip git
-    - docker-php-ext-configure gd --with-freetype-dir=/usr/include/freetype2 --with-jpeg-dir=/usr/include
-    - docker-php-ext-install gd
-    - curl -sS https://getcomposer.org/installer | php
-    - mv composer.phar /usr/local/bin/composer
     - composer install
+  artifacts:
+    paths:
+      - vendor/
 
-# Run tests (you can replace this with your actual testing script)
-run_tests:
+test:
   stage: test
-  image: php:5.6
+  image: php:7.4
+  before_script:
+    - apt-get update && apt-get install -y zip unzip
+    - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+    - composer install
   script:
-    - vendor/bin/phpunit --configuration phpunit.xml.dist
+    - ./vendor/bin/phpunit --testdox
 
-# Deploy to production (you can modify this section based on your environment)
-#deploy_to_production:
+build:
+  stage: build
+  image: php:7.4
+  script:
+    - echo "Building project..."
+
+#deploy:
 #  stage: deploy
-#  script:
-#    - echo "Deploying to production server..."
-#    - ssh user@production-server 'cd /path/to/your/project && git pull origin master'
-#    - echo "Deployment completed"
+#  image: alpine:latest
 #  only:
-#    - master
+#    - main
+#  before_script:
+#    - apk add --no-cache openssh
+#  script:
+#    - scp -r ./* user@your_server:/path/to/deployment/
