--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,12 @@
 stages:
   - install
   - test
+  - build
+#  - deploy
 
 install_dependencies:
   stage: install
-  image: richarvey/nginx-php-fpm:php5.6  # Use a PHP 5.6-compatible image
-  before_script:
-    - apt-get update && apt-get install -y unzip
-    - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+  image: composer:latest
   script:
     - composer install
   artifacts:
@@ -16,6 +15,26 @@ install_dependencies:
 
 test:
   stage: test
-  image: richarvey/nginx-php-fpm:php5.6  # Use the same image for consistency
+  image: php:7.4
+  before_script:
+    - apt-get update && apt-get install -y zip unzip
+    - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+    - composer install
   script:
     - ./vendor/bin/phpunit --testdox
+
+build:
+  stage: build
+  image: php:7.4
+  script:
+    - echo "Building project..."
+
+#deploy:
+#  stage: deploy
+#  image: alpine:latest
+#  only:
+#    - main
+#  before_script:
+#    - apk add --no-cache openssh
+#  script:
+#    - scp -r ./* user@your_server:/path/to/deployment/
