--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "php": "5.6.*",
-    "phpunit/phpunit": "^6.5"
+    "php": "8.3.13",
+    "phpunit/phpunit": "6.5.14"
   }
 }
