--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "php": "8.3.13",
-    "phpunit/phpunit": "6.5.14"
+    "php": "^7.0",
+    "phpunit/phpunit": "^6.5.14"
   }
 }
