--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,11 @@ install_dependencies:
   stage: install
   image: php:7.0-cli
   before_script:
-    - apt-get update && apt-get install -y zip unzip php-zip git curl
+    - apt-get update && apt-get install -y unzip php-zip git curl
+    - cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
   script:
-    - composer install --ignore-platform-reqs
+    - composer install-prefer-dist --no-progress --ignore-platform-reqs
     - php -v
   artifacts:
     paths:
@@ -27,9 +28,10 @@ test:
   stage: test
   image: php:7.0-cli
   before_script:
-    - apt-get update && apt-get install -y zip unzip php-zip unzip
+    - apt-get update && apt-get install -y unzip php-zip unzip
     - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-    - composer install --ignore-platform-reqs
+    - cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
+    - composer install --prefer-dist --no-progress --ignore-platform-reqs
     - php -v
   script:
     - ./vendor/bin/phpunit --testdox
