--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,11 @@ cache:
 
 before_script:
   # Install required system dependencies
-  - apt-get update && apt-get install -y unzip git php-zip
+  - apt-get update && apt-get install -y unzip git php8.2-zip
+  - apt-get update && apt-get install -y software-properties-common
+  - add-apt-repository ppa:ondrej/php
+  - apt-get update && apt-get install -y unzip git php8.2 php8.2-zip
+  - php --version
 
   # Ensure a valid php.ini exists
   - cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
