--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: php:latest
+image: php:8.2-cli
 
 services:
   - mysql:latest
@@ -16,9 +16,7 @@ cache:
 
 before_script:
   # Install required system dependencies
-  - apt-get update && apt-get install -y software-properties-common
-  - add-apt-repository ppa:ondrej/php
-  - apt-get update && apt-get install -y unzip git php8.2 php8.2-zip
+  - apt-get update && apt-get install -y unzip git
   - php --version
 
   # Ensure a valid php.ini exists
