--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
-    "php": "7.0",
-    "phpunit/phpunit": "6.5.14"
+    "php": "7.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.0"
   }
 }
