--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,22 +16,21 @@ cache:
 
 before_script:
   # Install required system dependencies
-  - apt-get update && apt-get install -y unzip git mysql-client
-  - php --version
+  - apt-get update && apt-get install -y unzip git
 
   # Ensure a valid php.ini exists
   - cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
 
-  # Wait for MySQL to be ready (using sleep as a basic solution)
+  # Wait for MySQL to be ready
   - until mysql -h mysql -u root -proot -e "SHOW DATABASES"; do echo "Waiting for MySQL..."; sleep 5; done
 
   # Import the database schema (db/database.sql) into MySQL
-  - mysql -h mysql -u root -proot $MYSQL_DATABASE < db/database.sql
+  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE < db/database.sql
 
   # Insert sample rows into the database
-  - mysql -h mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user1', 'user1@example.com', 'password123');"
-  - mysql -h mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user2', 'user2@example.com', 'password456');"
-  - mysql -h mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user3', 'user3@example.com', 'password789');"
+  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user1', 'user1@example.com', 'password123');"
+  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user2', 'user2@example.com', 'password456');"
+  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user3', 'user3@example.com', 'password789');"
 
 stages:
   - install
