--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,22 +15,22 @@ cache:
     - ~/.composer/cache
 
 before_script:
-  # Install required system dependencies
-  - apt-get update && apt-get install -y unzip git
+  # Install required system dependencies, including the MySQL client
+  - apt-get update && apt-get install -y unzip git default-mysql-client
 
   # Ensure a valid php.ini exists
   - cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
 
   # Wait for MySQL to be ready
-  - until docker exec mysql mysql -u root -proot -e "SHOW DATABASES"; do echo "Waiting for MySQL..."; sleep 5; done
+  - until mysql -h mysql -u root -proot -e "SHOW DATABASES"; do echo "Waiting for MySQL..."; sleep 5; done
 
   # Import the database schema (db/database.sql) into MySQL
-  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE < db/database.sql
+  - mysql -h mysql -u root -proot $MYSQL_DATABASE < db/database.sql
 
   # Insert sample rows into the database
-  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user1', 'user1@example.com', 'password123');"
-  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user2', 'user2@example.com', 'password456');"
-  - docker exec -i mysql mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user3', 'user3@example.com', 'password789');"
+  - mysql -h mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user1', 'user1@example.com', 'password123');"
+  - mysql -h mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user2', 'user2@example.com', 'password456');"
+  - mysql -h mysql -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user3', 'user3@example.com', 'password789');"
 
 stages:
   - install
