--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,21 +16,11 @@ cache:
 
 before_script:
   # Install required system dependencies
-  - apt-get update && apt-get install -y unzip git default-mysql-client
+  - apt-get update && apt-get install -y unzip git
+  - php --version
 
   # Ensure a valid php.ini exists
   - cp /usr/local/etc/php/php.ini-development /usr/local/etc/php/php.ini
-
-  # Wait for MySQL to be ready (use localhost or 127.0.0.1 instead of mysql)
-  - until mysql -h 127.0.0.1 -u root -proot -e "SHOW DATABASES"; do echo "Waiting for MySQL..."; sleep 5; done
-
-  # Import the database schema (db/database.sql) into MySQL
-  - mysql -h 127.0.0.1 -u root -proot $MYSQL_DATABASE < db/database.sql
-
-  # Insert sample rows into the database
-  - mysql -h 127.0.0.1 -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user1', 'user1@example.com', 'password123');"
-  - mysql -h 127.0.0.1 -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user2', 'user2@example.com', 'password456');"
-  - mysql -h 127.0.0.1 -u root -proot $MYSQL_DATABASE -e "INSERT INTO users (username, email, password) VALUES ('user3', 'user3@example.com', 'password789');"
 
 stages:
   - install
@@ -50,7 +40,6 @@ run_tests:
   stage: test
   script:
     - echo "Running tests..."
-    # Example test to check if the users were inserted and can be fetched
     - php vendor/bin/phpunit --configuration phpunit.xml.dist
   only:
     - main
