--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ run_tests:
   stage: test
   script:
     - echo "Running tests..."
+    - docker ps -a
     - php vendor/bin/phpunit --configuration phpunit.xml.dist
   only:
     - main
